--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,3 @@
 PORT=3000
+JWT_SECRET=v2gaSalajane
+MONGODB_URI=mongodb+srv://taneltekko:v2gaSalajane@finances.1cjq4yl.mongodb.net/?retryWrites=true&w=majority
