--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@vitejs/plugin-react": "^4.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
