--- a/Client/tsconfig.json
+++ b/Client/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "baseUrl": ".",
   "paths": {
-    "@/*": ["./src/@*"]
+    "@/*": ["./src/@/"]
   },
   "compilerOptions": {
     "target": "ES2020",
