--- a/Client/tsconfig.json
+++ b/Client/tsconfig.json
@@ -17,6 +17,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "useUnknownInCatchVariables": false,
 
     /* Linting */
     "strict": true,
