corrected team by color, added new route for login

--- a/Client/tsconfig.json
+++ b/Client/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "baseUrl": ".",
   "paths": {
-    "@/*": ["./src/@/"]
+    "@/*": ["./src/@/*"],
+    "@root/*": ["./src/*"]
   },
   "compilerOptions": {
     "target": "ES2020",
