--- a/Client/package.json
+++ b/Client/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.45.4",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
+    "recharts": "^2.7.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "zod": "^3.21.4"
